# fiscal-copilot-demo

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  catalog-info.yaml  docker-compose.f3.yml  pyproject.toml
.brain/: done-registry.md  last-verification.md  last-verification.md.used  session-state.md  task.md
.claude/agents/: analizador.md  aws-deployer.md  backend-dev.md  evals-engineer.md  verificador-adversarial.md
.deepeval/: .deepeval_telemetry.txt
app/: auth.py  bedrock_agent.py  db.py  main.py  mock_agent.py  schemas.py  seed.py
app/agent/: system_prompt.py
app/routers/: approvals.py  ask.py  dashboard.py  demo.py  health.py  metrics.py  traces.py  verificar_aws.py
app/static/: architecture.html  demo.html
app/tools/: __init__.py  calcular_itbis.py  donde_verificar.py  explicar_componente.py  (+3 more)
aws/: ids.env.example
docs/: COMO-SE-HIZO.md  DEMO-GUIDE.md  EVIDENCIA-F2.md  EVIDENCIA-REQUISITOS.md  EVIDENCIA-SEGURIDAD.md  GUION-ENTREVISTA.md  INFORME-F1.md  INFORME-F3.md  INFORME-F5.md  INFORME-F7UI.md  INFORME-FINAL.md  ORDEN-FINAL.md  PLAN-V2-OVERRIDES.md  PROMPT-F1.md  REGISTRY-NAIIAN.md  VERIFICACION-REGISTRY.md  plan-v1-demototal.md
evals/: golden_set.jsonl  harness_results.json  judge_results.json  judges.py  router.py  router_results.json  run_all.py  run_harness.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
reports/: comparativa.md
specs/: hitl-workflow.md  metrics-endpoint.md
tests/: conftest.py  test_api.py  test_bedrock_observability.py  test_f3.py  test_f7.py  test_metrics.py  test_tools.py
(+11 files in other folders)
